# DLFrameworkTest

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md
Cuda/: .clang-format  CMakeLists.txt  README.md  cuda_timer.cuh  cuda_utils.cuh  curand_fp16.h  utils.h
Cuda/access_pattern/: CMakeLists.txt  README.md  access1.cuh  access2.cuh  main.cu  metrics.txt  postprocess.py  run.sh
Cuda/access_pattern/figures/: 30000_1024.tsv  30000_1024_data.tsv  30000_1024_data_vload.tsv  30000_1024_merged.tsv  30000_1024_vectorized_access.tsv  60000_4096.tsv  60000_4096_data.tsv  60000_4096_merged.tsv  60000_4096_vectorized_access.tsv  merge_results.py  plot.ipynb
Cuda/bar_sync/: CMakeLists.txt  bar_sync.cu  barrier.cuh  copy.cuh  run.sh  sync.cuh  utils.cuh
Cuda/cmake/: select_compute_arch.cmake  third_party.cmake
Cuda/cute/: README.md
Cuda/cute/copy/: CMakeLists.txt  README.md  copy.cu  copy_config.py  utils.h
Cuda/cute/gemm/: CMakeLists.txt  gemm.cuh  main.cu
Cuda/cute/layout/: CMakeLists.txt  README.md  layout_operations.cu
Cuda/cute/layout/figures/: figures.pptx
Cuda/cute/swizzle/: CMakeLists.txt  Makefile  README.md  swizzle.cu  swizzle.py  swizzle_mode.cu  swizzle_model.md  xor.py
Cuda/cute/swizzle/figures/: swizzle.pptx
Cuda/hopper_gemm/: README.md  cuda_utils.cuh  tma_utils.cuh  utils.hpp  wgmma_utils.cuh
Cuda/hopper_gemm/hopper_gemm/: CMakeLists.txt  gemm.cu  hopper_gemm.cuh  run_build.sh
Cuda/hopper_gemm/persistent_ws_pipelined_gemm/: CMakeLists.txt  gemm.cuh  main.cu  run.sh
Cuda/hopper_gemm/pipelined_ws_gemm/: CMakeLists.txt  README.md  gemm.cuh  main.cu  run.sh  scheduler.cuh
Cuda/hopper_gemm/print_layout/: CMakeLists.txt  README.md  print_layout.cu
Cuda/hopper_gemm/tma_load_cuda/: CMakeLists.txt  Makefile  main.cu  run.sh  tma.cuh  tma_utils.cuh
Cuda/hopper_gemm/tma_load_pipeline/: CMakeLists.txt  Makefile  gemm.cuh  main.cu  scheduler.cuh
Cuda/hopper_gemm/tma_load_store/: CMakeLists.txt  Makefile  build.sh  gemm.cu  hopper_gemm.cu  hopper_gemm.cuh  main.cu  tma_copy.cu  tma_copy.cuh  tma_copy_multicast.cu  tma_load.cu
Cuda/hopper_gemm/tma_wgmma/: CMakeLists.txt  Makefile  hopper_gemm.cuh  run_build.sh  tma_wgmma.cu
Cuda/hopper_gemm/wgmma/: CMakeLists.txt  Makefile  hopper_gemm.cuh  run_build.sh  wgmma.cu
Cuda/query_device/: CMakeLists.txt  main.cu
Cuda/reduce/: CMakeLists.txt  reduction_common.h  reduction_kernel.cuh  reduction_ops.cu
Cuda/reduction_ops/: reduction_common.h  reduction_kernel.cuh  reduction_kernel.h  reduction_ops.cu  reduction_ops.h
Cuda/scan/: CMakeLists.txt  README.md  main.cu  scan.cuh
Cuda/sgemm/: CMakeLists.txt  README.md  cublass_gemm.h  curand_fp16.cu  cutlass_warp_gemm.cuh  kernel.cuh  main.cu  swizzle.md  swizzle_function.py  swizzled_4x8.tsv  utils.h
Cuda/sgemm/figures/: GEMM-on-GPU.pptx  data.tsv
Cuda/softmax/: kernel.cuh  softmax.cu
Cuda/softmax_forward_imp/: CMakeLists.txt  kernel.cuh  makefile  softmax.cu
Cuda/tensor_core/: CMakeLists.txt  README.md  ldmatrix.cu  mma.cu  utils.h  wmma_layout.txt
Cuda/tensor_core/figures/: tensorcore_ptx.pptx
Cuda/test_layout/: CMakeLists.txt  README.md  main.cu  tile_loader.h
Julia/Flux/: AutoDiff.ipynb  Flux.ipynb  char-rnn.ipynb
Julia/Flux/notes/: AutoDiff.ipynb  BP_in_Flux.md  Flux.ipynb  RNN_Test.ipynb  Zygote_code_study.ipynb  char-rnn.ipynb  treelike_in_Flux.ipynb
Julia/experiments/: README.md
Julia/experiments/lstm_test/: README.md  cpu_test.jl  test.jl
Julia/experiments/lstm_test/Recurrent/: common.jl  lstm.jl  recurrent.jl
Julia/experiments/lstm_test/docs/: code_llvm.txt  code_lowered.txt  code_native.txt
Julia/experiments/lstm_test/naive_cpu_test/: cpu_test.jl
Julia/notes/: 01_JPL_FQ.md  02_JPL_gpu_computing.md  03_JPL_metaprogramming.md  GPU_computing.md  Generated_function.ipynb  Julia_ASTs.ipynb  Julia_FQ.md  Macro.ipynb  Types.ipynb
PyTorch/TorchScript/: README.md
PyTorch/test_pytorch_customize_op/: CMakeLists.txt  README.md  errors.h  my_add_kernel.cu  my_add_kernel.cuh  setup.py  test_my_add.py
PyTorch/test_pytorch_customize_op/cmake/: python.cmake
fused_mha/: README.md  codes_flash_attention.md
fused_mha/figures/: mha.pptx
ideas/: CMakeLists.txt  main.cc
jupyternotes/test_transformation/: check_correctness.ipynb  transform_iteration_space.ipynb
softmax_cuda_implementation/: makefile  softmax.cu
tensorflow/: README.md
tensorflow/SE_ResNeXt/: SE_ResNeXt_fluid.py  SE_ResNeXt_tensorflow.py
tensorflow/data_parallelism_for_nmt/: README.md  allreduce.py  analysis_timeline.py  batch_allreduce.py  iterator_helper.py  profiling_train.py  run.sh  seq2seq_model.py  train.py  utils.py  variable_mgr.py  variable_mgr_util.py
tensorflow/data_parallelism_for_nmt/docs/: compile_tf_with_debug_symbol.md  fix_the_warmup_problem.md  inter_op_parallelism_threads_with_MKL.md  optimized_io_pipline.md  optimized_op_scheduling.md  summarization.md  test_allreduce_algorithm.md  test_cudnn_lstm.md  test_independent_model_replica.md  test_ps_mode.md
tensorflow/data_parallelism_for_nmt_first_imp/: run.sh  seq2seq_model.py  train.py  utils.py
tensorflow/dataset_api/: README.md  config.py  dataset_api_example.py  rnnlm.py  timeline_utils.py  train.py  utils.py
tensorflow/hello_world_mnist/: hello_world.py  load_MNIST.py
tensorflow/hello_world_mnist/data/: download.sh
tensorflow/notes/: introduction.md
tensorflow/rnnlm/: rnnlm_fluid.py  rnnlm_tensorflow.py
tensorflow/sequence_tagging/: config.py  sequence_tagging_tensorflow.py
tensorflow/sequence_tagging/common/: config.py
tensorflow/sequence_tagging/fluid/: data_reader_fluid.py
tensorflow/test_parallel_tensorflow/: README.md  iterator_helper.py  model.py  model_helper.py  profiling_train.py  run.sh  seq2seq_model.py  train.py
tensorflow/test_parallel_tensorflow/data/: download.sh
tensorflow/tf_internals/: How_TensorFlow_Schedule_Operators.md  How_TensorFlow_Schedules_Operators.md  README.md  codeflow.md  op_scheduling.md  useful_resources.md
tensorflow/tf_internals/images/: images.pptx
tools/: clang_format.hook
triton/: matmul.py
(+5 files in other folders)
